# SDRPlusPlus

./: CMakeLists.txt  make_macos_bundle.sh  make_windows_package.ps1  readme.md
.github/workflows/: build_all.yml
android/app/: build.gradle
core/: CMakeLists.txt
core/backends/android/: backend.cpp
core/backends/glfw/: backend.cpp
core/src/gui/: main_window.cpp
core/src/gui/widgets/: image.cpp  image.h
decoder_modules/atv_decoder/src/: main.cpp
decoder_modules/satv_decoder/: CMakeLists.txt
decoder_modules/satv_decoder/src/: main.cpp
misc_modules/signalstrengthgraph/: CMakeLists.txt
misc_modules/signalstrengthgraph/src/: main.cpp
source_modules/audio_source/: CMakeLists.txt
source_modules/audio_source/src/: main.cpp
source_modules/raw_file_source/: CMakeLists.txt
source_modules/raw_file_source/src/: main.cpp  rawreader.h
